<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@color/app_background">

    <ImageView
        android:id="@+id/thumbnail_view_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/poster_view_id"
        android:layout_width= "180dp"
        android:layout_height="180dp"
        android:layout_below="@+id/thumbnail_view_id"
        android:layout_alignParentStart="true"
        android:layout_marginTop="-50dp" />

    <LinearLayout
        android:id="@+id/movie_info"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/app_background"
        android:layout_below="@+id/thumbnail_view_id"
        android:layout_toRightOf="@id/poster_view_id"
        android:padding="5dp"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="10dp"
            android:textColor="@color/green_text_color"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/title_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_text_color"
            android:text="@string/original_movie_title"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="10dp"
            android:textColor="@color/green_text_color"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/date_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_format"
            android:textColor="@color/white_text_color"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/rate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textSize="10dp"
            android:textColor="@color/green_text_color"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:id="@+id/star_rate_linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rate_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_content"
                android:textColor="@color/white_text_color"/>


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/app_background"
        android:layout_below="@id/movie_info"
        android:layout_margin="1dp">

        <TextView
            android:id="@+id/overview_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textColor="@color/green_text_color"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/overview_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/movie_overview"
            android:textColor="@color/white_text_color"/>

    </LinearLayout>

</RelativeLayout>